Fixed heading responsiveness on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,12 @@ a{
   font-size: 52px;
 }
 
+@media(max-width:1024px){
+  #sidebar h1{
+    font-size: 10vw;
+  }
+}
+
 #profile{
   max-width: 100%;
 }
